--- a/docs/software/controls/closed/pid.mdx
+++ b/docs/software/controls/closed/pid.mdx
@@ -4,3 +4,12 @@ description: PID Control for systems with the need for precise control.
 hide_table_of_contents: true
 sidebar_position: 2
 ---
+
+```mermaid
+flowchart LR
+    Setpoint --> Computer
+    Computer --> Motor
+    Motor --> Output
+    Output --> Sensor
+    Sensor --> Computer
+```
