--- a/docs/software/controls/open/feed-fwd.mdx
+++ b/docs/software/controls/open/feed-fwd.mdx
@@ -4,3 +4,11 @@ description: PID Control for systems with the need for precise control.
 hide_table_of_contents: true
 sidebar_position: 1
 ---
+
+```mermaid
+stateDiagram-v2
+    direction LR
+    Setpoint --> Computer
+    Computer --> Motor
+    Motor --> Output
+```
