--- a/docs/software/java/quick-ref.mdx
+++ b/docs/software/java/quick-ref.mdx
@@ -5,7 +5,9 @@ sidebar_position: 0
 ---
 
 # Quick Reference Guide
-This is a quick reference guide for Java programming. It provides an overview of the key concepts throughout this section. It is not meant to be a comprehensive guide, but rather a quick reference for the most common concepts and syntax used in Java programming.
+This is a quick reference guide for Java programming. It provides an overview of the key concepts throughout this
+section. It is not meant to be a comprehensive guide, but rather a quick reference for the most common concepts and
+syntax used in Java programming.
 
 ## [**Variables & Data Types**](./vars-dt.mdx)
 - Variables are containers for data. Always assign a default value.
@@ -59,7 +61,8 @@ This is a quick reference guide for Java programming. It provides an overview of
     </td>
     </tr>
     </table>
-- Enums: Enums are a special type of class that represents a fixed set of constants. They are used to define a variable that can only take one of a predefined set of values.
+- Enums: Enums are a special type of class that represents a fixed set of constants. They are used to define a variable
+that can only take one of a predefined set of values.
 ## [**Operators**](./operators.mdx)
 - Arithmetic:
     <table>
@@ -202,7 +205,8 @@ This is a quick reference guide for Java programming. It provides an overview of
     <td> `x = x / 3;` </td>
     </tr>
     </table>
-- Date Truncation: Be careful when performing math between an `int` and a `double`. You cannot store decimal precision data in an `int` datatype. Any decimal precision will be truncated.
+- Date Truncation: Be careful when performing math between an `int` and a `double`. You cannot store decimal precision
+data in an `int` datatype. Any decimal precision will be truncated.
 
 ## [**Conditions**](./conditions.mdx)
 - Comparison:
