--- a/docs/software/robot_dev/commands.mdx
+++ b/docs/software/robot_dev/commands.mdx
@@ -9,7 +9,9 @@ sidebar_position: 3
 
 
 :::warning Avoid Using Commands!
-Please do everything possible to avoid commands. They have special behavior that attempts to handle scheduling that can make more complex robots unnecessary complicated. The only use case for commands should be interfacing with buttons to trigger a specific subsystem state. There should be little to no logic within the command.
+Please do everything possible to avoid commands. They have special behavior that attempts to handle scheduling that can
+make more complex robots unnecessary complicated. The only use case for commands should be interfacing with buttons to
+trigger a specific subsystem state. There should be little to no logic within the command.
 :::
 ## Types
 
