--- a/docs/software/java/classes-objs.mdx
+++ b/docs/software/java/classes-objs.mdx
@@ -7,11 +7,19 @@ sidebar_position: 7
 
 # Classes and Objects
 :::tip Objects are Everywhere
-Understanding classes and objects is vital for writing Java code. It is very important for programming our robot. Motors, sensors, and other components are all represented as objects in our code. We can use classes to define the properties and behaviors of these objects, making it easier to manage and control them.
+Understanding classes and objects is vital for writing Java code. It is very important for programming our robot.
+Motors, sensors, and other components are all represented as objects in our code. We can use classes to define the
+properties and behaviors of these objects, making it easier to manage and control them.
 
-Some of them we don't even create ourselves. Vendors and WPILib provide classes for us to use. For example, the `MotorController` class is provided by WPILib to control motors on the robot. We can create objects of this class and use its methods to control the motors.
+Some of them we don't even create ourselves. Vendors and WPILib provide classes for us to use. For example, the
+`MotorController` class is provided by WPILib to control motors on the robot. We can create objects of this class and
+use its methods to control the motors.
 :::
-Object oriented programming (OOP) is a feature of some programming languages that organizes code around data and objects, instead of strictly logic. Using OOP, we can create blueprints for data with information about an type of object's properties, and we can re-use those blueprints to store characteristics for multiple objects. Overall, OOP is a way of organizing data and functions in a way that is easily reusable and maintainable. Lets compare classes and objects:
+Object oriented programming (OOP) is a feature of some programming languages that organizes code around data and
+objects, instead of strictly logic. Using OOP, we can create blueprints for data with information about an type of
+object's properties, and we can re-use those blueprints to store characteristics for multiple objects. Overall, OOP is
+a way of organizing data and functions in a way that is easily reusable and maintainable. Lets compare classes and
+objects:
 <table>
 <tr>
 <td> </td>
@@ -36,22 +44,35 @@ Object oriented programming (OOP) is a feature of some programming languages tha
 </table>
 
 ## Classes
-Java is a class-based language, meaning that all code must be written inside a class. A class is a blueprint for creating objects, and it defines the properties and behaviors that the objects created from the class will have. Classes can contain variables (also known as fields or attributes) and methods (functions that define the behavior of the class).
+Java is a class-based language, meaning that all code must be written inside a class. A class is a blueprint for
+creating objects, and it defines the properties and behaviors that the objects created from the class will have.
+Classes can contain variables (also known as fields or attributes) and methods (functions that define the behavior of
+the class).
 
-Classes are defined using the `class` keyword, followed by the class name. The class name should be descriptive and follow the naming conventions of Java. They should be named using `PascalCase`, which means that the first letter of each word is capitalized. For example, `Robot`, `MotorController`, and `Sensor` are all valid class names.
+Classes are defined using the `class` keyword, followed by the class name. The class name should be descriptive and
+follow the naming conventions of Java. They should be named using `PascalCase`, which means that the first letter of
+each word is capitalized. For example, `Robot`, `MotorController`, and `Sensor` are all valid class names.
 ```java
 public class ShooterSubsystem {
    ... // Class code
 }
 ```
 :::note 1 Class Per File
-Each java file can only contain one public class, and the name of the file must match the name of the public class. For example, if you have a class named `ShooterSubsystem`, the file should be named `ShooterSubsystem.java`. There can be multiple classes in a single file, but only one can be [public](#-access-modifiers).
+Each java file can only contain one public class, and the name of the file must match the name of the public class. For
+example, if you have a class named `ShooterSubsystem`, the file should be named `ShooterSubsystem.java`. There can be
+multiple classes in a single file, but only one can be [public](#-access-modifiers)
 :::
 
-If a variable is defined inside a class, it is called a field or attribute. Fields are used to store data that is associated with the class. We follow a similar naming convention as generic variables, using `trailing_snake_case_` for field names. For example, `motor_speed_`, `sensor_data_`, and `robot_name_` are all valid field names. The trailing underscore is used to differentiate fields from local variables and parameters.
+If a variable is defined inside a class, it is called a field or attribute. Fields are used to store data that is
+associated with the class. We follow a similar naming convention as generic variables, using `trailing_snake_case_` for
+field names. For example, `motor_speed_`, `sensor_data_`, and `robot_name_` are all valid field names. The trailing
+underscore is used to differentiate fields from local variables and parameters.
 
 ## Objects
-An object is an instance of a class. It is created from the class blueprint and has its own set of data and methods. If we want to create an object of our class, we need to create a constructor. A constructor is a special method that is called when an object is created. It initializes the object's data and sets up any necessary resources. The constructor has the same name as the class and does not have a return type.
+An object is an instance of a class. It is created from the class blueprint and has its own set of data and methods. If
+we want to create an object of our class, we need to create a constructor. A constructor is a special method that is
+called when an object is created. It initializes the object's data and sets up any necessary resources. The constructor
+has the same name as the class and does not have a return type.
 ```java
 public class ShooterSubsystem {
     // Fields
@@ -66,24 +87,31 @@ We could then create an object of our class like this:
 ```java
 ShooterSubsystem shooter = new ShooterSubsystem();
 ```
-If we want to create multiple objects of the same class, we can do so by calling the constructor multiple times. Each object will have its own set of data and methods, but they will all share the same class blueprint.
+If we want to create multiple objects of the same class, we can do so by calling the constructor multiple times. Each
+object will have its own set of data and methods, but they will all share the same class blueprint.
 ```java
 ShooterSubsystem front_shooter = new ShooterSubsystem();
 ShooterSubsystem back_shooter = new ShooterSubsystem();
 ```
-You can access the fields and methods of an object using the dot notation. For example, if we have an field `subsystem_name_` of the class `ShooterSubsystem`, we can access its fields and methods like this:
+You can access the fields and methods of an object using the dot notation. For example, if we have an field
+`subsystem_name_` of the class `ShooterSubsystem`, we can access its fields and methods like this:
 ```java
 front_shooter.subsystem_name_ = "Shooter";
 ```
 :::warning[Accessing Fields]
-You should not access fields directly from outside the class. Instead, you should use methods to get and set the values of the fields. This is known as encapsulation, and it helps to protect the data and maintain the integrity of the object. You can create getter and setter methods to access and modify the fields of the class.
+You should not access fields directly from outside the class. Instead, you should use methods to get and set the values
+of the fields. This is known as encapsulation, and it helps to protect the data and maintain the integrity of the
+object. You can create getter and setter methods to access and modify the fields of the class.
 :::
-This is the same notation that we use to access methods of an object. For example, if we have a method `setMotorSpeed(double speed)` in the class `ShooterSubsystem`, we can call it like this:
+This is the same notation that we use to access methods of an object. For example, if we have a method
+`setMotorSpeed(double speed)` in the class `ShooterSubsystem`, we can call it like this:
 ```java
 front_shooter.setMotorSpeed(1.0);
 ```
 
-Similar to methods, we can also create parameters for our constructors. This allows us to pass in values when creating an object, which can be used to initialize the object's data. With parameters for our constructor, create even more specific objects and increase the reusability of our class.
+Similar to methods, we can also create parameters for our constructors. This allows us to pass in values when creating
+an object, which can be used to initialize the object's data. With parameters for our constructor, create even more
+specific objects and increase the reusability of our class.
 ```java
 public class ShooterSubsystem {
     // Fields
@@ -96,7 +124,11 @@ public class ShooterSubsystem {
 ```
 
 ## Example
-Object oriented programming is a powerful tool that allows us to create complex systems with reusable code, but it is typically one of the final things learned in a Java course. We need to have a good understanding of classes and objects because our robot code is heavily based on OOP. Sometimes the hardest part of OOP is understanding why and where to use it. Below is an example of a class that represents a motor controller. It has fields for the motor speed and direction, and methods to set the speed and direction of the motor.
+Object oriented programming is a powerful tool that allows us to create complex systems with reusable code, but it is
+typically one of the final things learned in a Java course. We need to have a good understanding of classes and objects
+because our robot code is heavily based on OOP. Sometimes the hardest part of OOP is understanding why and where to use
+it. Below is an example of a class that represents a motor controller. It has fields for the motor speed and direction,
+and methods to set the speed and direction of the motor.
 ```java
 public class MotorController {
     // Fields
@@ -136,7 +168,11 @@ public class MotorController {
     }
 }
 ```
-As you can see there was a fair amount of code just to control a single motor. We can then create an object of the `MotorController` class and use its methods to control the motor. What if we wanted to create a shooter subsystem that uses two motor controllers? We could create a class for the shooter subsystem that contains two `MotorController` objects and methods to control them. It will allow us to encapsulate the logic for controlling the shooter in one place, making it easier to maintain and understand.
+As you can see there was a fair amount of code just to control a single motor. We can then create an object of the
+`MotorController` class and use its methods to control the motor. What if we wanted to create a shooter subsystem that
+uses two motor controllers? We could create a class for the shooter subsystem that contains two `MotorController`
+objects and methods to control them. It will allow us to encapsulate the logic for controlling the shooter in one
+place, making it easier to maintain and understand.
 ```java
 // Creating the Objects
 MotorController left_shooter_motor = new MotorController(false);
@@ -164,11 +200,14 @@ if(b_button_pressed) {
 
 
 ## Access Modifiers
-Access modifiers are keywords that determine the visibility and accessibility of classes, methods, and variables. They control how other parts of the code can interact with them. The most common access modifiers in Java are:
+Access modifiers are keywords that determine the visibility and accessibility of classes, methods, and variables. They
+control how other parts of the code can interact with them. The most common access modifiers in Java are:
 - `public`: The class, method, or variable can be accessed from anywhere in the code.
 - `private`: The class, method, or variable can only be accessed within the class it is defined in.
-- `protected`: The class, method, or variable can be accessed within the class it is defined in and by subclasses (classes that extend it).
-- `default` (no modifier): The class, method, or variable can be accessed within the same package (a group of related classes).
+- `protected`: The class, method, or variable can be accessed within the class it is defined in and by subclasses
+(classes that extend it).
+- `default` (no modifier): The class, method, or variable can be accessed within the same package (a group of related
+classes).
 
 The access modifier is placed before the class, method, or variable declaration. For example:
 ```java
@@ -179,7 +218,9 @@ public class MyClass { // Public class, accessible from anywhere
     }
 }
 ```
-We can also use modifiers to control the behavior of methods. For example, we can use the `static` modifier to indicate that a method belongs to the class itself, rather than to an instance of the class. This means that the method can be called without creating an object of the class.
+We can also use modifiers to control the behavior of methods. For example, we can use the `static` modifier to indicate
+that a method belongs to the class itself, rather than to an instance of the class. This means that the method can be
+called without creating an object of the class.
 ```java
 public class MathUtils {
     public static int add(int a, int b) {
@@ -192,8 +233,12 @@ int sum = MathUtils.add(5, 3);
 ```
 
 ## Inheritance
-Inheritance is a key feature of object-oriented programming that allows us to create new classes based on existing classes. This allows us to reuse code and create a hierarchy of classes. The new class is called the subclass or derived class, and the existing class is called the superclass or base class. The subclass inherits the fields and methods of the superclass, and can also add its own fields and methods or override the methods of the superclass.
-To create a subclass, we use the `extends` keyword followed by the name of the superclass. For example, if we have a class `Vehicle`, we can create a subclass `Car` like this:
+Inheritance is a key feature of object-oriented programming that allows us to create new classes based on existing
+classes. This allows us to reuse code and create a hierarchy of classes. The new class is called the subclass or
+derived class, and the existing class is called the superclass or base class. The subclass inherits the fields and
+methods of the superclass, and can also add its own fields and methods or override the methods of the superclass.
+To create a subclass, we use the `extends` keyword followed by the name of the superclass. For example, if we have a
+class `Vehicle`, we can create a subclass `Car` like this:
 ```java title="Vehicle.java"
 public class Vehicle {
     int number_of_wheels_;
@@ -257,7 +302,10 @@ my_motorcycle.popWheelie(); // Method from Motorcycle class
 ```
 
 ## Packages
-Packages are used to organize classes and avoid naming conflicts. A package is a group of related classes that are stored in a directory structure. The package name is usually the reverse of the domain name of the organization or project, followed by the name of the package. For example, we may create a package of each subsystem on our robot. The package name for the shooter subsystem could be `robot.subsystems.shooter`.
+Packages are used to organize classes and avoid naming conflicts. A package is a group of related classes that are
+stored in a directory structure. The package name is usually the reverse of the domain name of the organization or
+project, followed by the name of the package. For example, we may create a package of each subsystem on our robot. The
+package name for the shooter subsystem could be `robot.subsystems.shooter`.
 ```java
 package robot.subsystems.shooter;
 public class ShooterSubsystem {
@@ -265,7 +313,8 @@ public class ShooterSubsystem {
 }
 ```
 :::tip
-When creating a package, make sure to create a directory structure that matches the package name. For example, if the package name is `robot.subsystems.shooter`, you should create a directory structure like this:
+When creating a package, make sure to create a directory structure that matches the package name. For example, if the
+package name is `robot.subsystems.shooter`, you should create a directory structure like this:
 ```
 robot/
 └── subsystems
@@ -274,11 +323,14 @@ robot/
 :::
 
 ## Importing Classes
-If we want to use a class that is defined in another package, we need to import it. This is done using the `import` keyword followed by the package name and class name. For example, if we want to use the `MathUtils` class from our custom package `com.example.utils`, we would write:
+If we want to use a class that is defined in another package, we need to import it. This is done using the `import`
+keyword followed by the package name and class name. For example, if we want to use the `MathUtils` class from our
+custom package `com.example.utils`, we would write:
 ```java
 import com.example.utils.MathUtils;
 ```
-You now have access to the `MathUtils` class and can use its methods in your code. If you want to use multiple classes from the same package, you can import them individually or use a wildcard `*` to import all classes from that package.
+You now have access to the `MathUtils` class and can use its methods in your code. If you want to use multiple classes
+from the same package, you can import them individually or use a wildcard `*` to import all classes from that package.
 ```java
 import com.example.utils.*;
 ```
