--- a/docs/software/java/standards.mdx
+++ b/docs/software/java/standards.mdx
@@ -8,7 +8,8 @@ sidebar_position: 10
 # Java Programming Standards
 
 ## Comments
-- All methods should be commented following java doc styling. Make sure to include any parameters or return members. Example is show below:
+- All methods should be commented following java doc styling. Make sure to include any parameters or return members.
+Example is show below:
     ```java
     /**
      * Calculates the chassis traveled distance based on provided speed and duration
@@ -38,7 +39,8 @@ sidebar_position: 10
     boolean is_enabled_;
     float error_;
     ```
-- Variables that are constant should be named using `SCREAMING_SNAKE_CASE`. The should also use the `final` and `static` modifiers to prevent accidental updates and multiple instances. Examples are shown below:
+- Variables that are constant should be named using `SCREAMING_SNAKE_CASE`. The should also use the `final` and
+`static` modifiers to prevent accidental updates and multiple instances. Examples are shown below:
     ```java
     static final double ELEVATOR_HOME_POSITION;
     static final int COUNTER_RESET;
