--- a/docs/software/tools/driver-station.mdx
+++ b/docs/software/tools/driver-station.mdx
@@ -12,16 +12,24 @@ import dsShortTiming from '@site/static/img/software/tools/driver-station/driver
 
 # FRC Driver Station
 <img src={dsFullDefault} width="1200"/>
-The Driver Station is the primary operator interface with the robot. It can be opened on a laptop connected to the robot network. It is used to enable/disable the robot along with transmitting the joystick inputs to the robot to be used in robot code. This is a simple overview of the Driver Station, but more documentation can be found [here](https://docs.wpilib.org/en/stable/docs/software/driverstation/driver-station.html).
+The Driver Station is the primary operator interface with the robot. It can be opened on a laptop connected to the
+robot network. It is used to enable/disable the robot along with transmitting the joystick inputs to the robot to be
+used in robot code. This is a simple overview of the Driver Station, but more documentation can be found
+[here](https://docs.wpilib.org/en/stable/docs/software/driverstation/driver-station.html)
 
 ## Enabling and Disabling
-The robot will boot up to an disabled state. The robot code will still be running, but all motor outputs are disabled so nothing will move (sensors will still update). Once the robot is enabled motor outputs will be enabled and them may be receiving a command from a default subsystem action.
+The robot will boot up to an disabled state. The robot code will still be running, but all motor outputs are disabled
+so nothing will move (sensors will still update). Once the robot is enabled motor outputs will be enabled and them may
+be receiving a command from a default subsystem action.
 
 :::danger[WARN WHEN YOU ENABLE]
-Ensure you warn anyone nearby when enabling the robot. The robot is dangerous and can easily hurt someone. You don't have to be touching the controller to make the robot move. Some robots go to a powered idle state when enabled.
+Ensure you warn anyone nearby when enabling the robot. The robot is dangerous and can easily hurt someone. You don't
+have to be touching the controller to make the robot move. Some robots go to a powered idle state when enabled.
 :::
 
-You can quickly identify the enabled status of the robot by looking at the RSL (Robot Signal Light). Flashing is enabled and solid is disabled. The robot can only be enabled by the Driver Station (unless connected to an FMS). The robot can be enabled and disabled by pressing the green enable and red disable buttons.
+You can quickly identify the enabled status of the robot by looking at the RSL (Robot Signal Light). Flashing is
+enabled and solid is disabled. The robot can only be enabled by the Driver Station (unless connected to an FMS). The
+robot can be enabled and disabled by pressing the green enable and red disable buttons.
 <img src={dsShortEnable} width="400"/>
 
 :::tip[Keyboard Shortcuts]
@@ -37,16 +45,21 @@ You can quickly identify the enabled status of the robot by looking at the RSL (
 There are 4 different operating modes that can be selected from the Driver Station.
 <img src={dsShortModes} width="400"/>
 - ***TeleOperated***
-    - This mode will be normal robot functionality. It has no time limit and is typically operation for testing or quick practice.
+    - This mode will be normal robot functionality. It has no time limit and is typically operation for testing or
+    quick practice.
 - ***Autonomous***
     - This mode will only execute code within the autonomous section of the robot code. It has no time limit.
 - ***Practice***
-    - This mode can be used to simulate a match. You can define the length of each match segment and the Driver Station will handle the enable and disable state aligned with the time settings. This is good for full match simulation while practicing or testing autos with a time limit.
+    - This mode can be used to simulate a match. You can define the length of each match segment and the Driver Station
+    will handle the enable and disable state aligned with the time settings. This is good for full match simulation
+    while practicing or testing autos with a time limit.
     - <img src={dsShortTiming} width="300"/>
 - ***Test***
-    - This mode is similar to TeleOperated, but can be reference in robot code to enable or disable specific actions. We typically lock tuning behavior behind this mode.
+    - This mode is similar to TeleOperated, but can be reference in robot code to enable or disable specific actions.
+    We typically lock tuning behavior behind this mode.
 
 :::danger[SELECT THE RIGHT MODE]
-Ensure you select the right operation mode before enabling the robot. You do not want to enable the robot in auto when you intend teleop.
+Ensure you select the right operation mode before enabling the robot. You do not want to enable the robot in auto when
+you intend teleop.
 :::
 
